--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ link_directories( ${LIBRARY_DIR} )
 
 # (REAL-TIME) CONTROL APPLICATION
 add_executable( RobotControl ${SOURCES_DIR}/main.c ${SOURCES_DIR}/system.c ${SOURCES_DIR}/robots.c ${SOURCES_DIR}/actuators.c ${SOURCES_DIR}/sensors.c ${SOURCES_DIR}/motors.c ${SOURCES_DIR}/ipc.c ${SOURCES_DIR}/data_io.c )
-target_compile_definitions( RobotControl PUBLIC -DDEBUG -DSIGNAL_IO_MODULES_PATH=${SIGNAL_IO_MODULES_PATH} -DACTUATOR_CONTROL_MODULES_PATH=${ACTUATOR_CONTROL_MODULES_PATH} -DROBOT_CONTROL_MODULES_PATH=${ROBOT_CONTROL_MODULES_PATH} )
+target_compile_definitions( RobotControl PUBLIC -DDEBUG -DZMQ_BUILD_DRAFT_API -DSIGNAL_IO_MODULES_PATH=${SIGNAL_IO_MODULES_PATH} -DACTUATOR_CONTROL_MODULES_PATH=${ACTUATOR_CONTROL_MODULES_PATH} -DROBOT_CONTROL_MODULES_PATH=${ROBOT_CONTROL_MODULES_PATH} )
 target_include_directories( RobotControl PUBLIC ${ZeroMQ_INCLUDE_DIR} )
 target_link_libraries( RobotControl DataLogging FunctionCurves SimpleJSON KalmanFilters SignalProcessing MultiThreading Timing ${CMAKE_DL_LIBS} ${ZeroMQ_LIBRARY} )
 
@@ -50,17 +50,17 @@ target_link_libraries( RobotControl DataLogging FunctionCurves SimpleJSON Kalman
 # set_target_properties( ForcePIControl PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${ACTUATOR_CONTROL_MODULES_PATH} )
 # set_target_properties( ForcePIControl PROPERTIES PREFIX "" )
 # target_include_directories( ForcePIControl PUBLIC ${SOURCES_DIR}/actuator_control/ )
-# 
-# add_library( SimpleControl MODULE ${SOURCES_DIR}/actuator_control/simple_control.c )
-# set_target_properties( SimpleControl PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${ACTUATOR_CONTROL_MODULES_PATH} )
-# set_target_properties( SimpleControl PROPERTIES PREFIX "" )
-# target_include_directories( SimpleControl PUBLIC ${SOURCES_DIR}/actuator_control/ )
-# 
-# add_library( SimpleJoint MODULE ${SOURCES_DIR}/robot_control/simple_joint.c )
-# set_target_properties( SimpleJoint PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${ROBOT_CONTROL_MODULES_PATH} )
-# set_target_properties( SimpleJoint PROPERTIES PREFIX "" )
-# target_include_directories( SimpleJoint PUBLIC ${SOURCES_DIR}/robot_control/ )
-# 
+ 
+add_library( SimpleControl MODULE ${SOURCES_DIR}/actuator_control/simple_control.c )
+set_target_properties( SimpleControl PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${ACTUATOR_CONTROL_MODULES_PATH} )
+set_target_properties( SimpleControl PROPERTIES PREFIX "" )
+target_include_directories( SimpleControl PUBLIC ${SOURCES_DIR}/actuator_control/ )
+ 
+add_library( SimpleJoint MODULE ${SOURCES_DIR}/robot_control/simple_joint.c )
+set_target_properties( SimpleJoint PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${ROBOT_CONTROL_MODULES_PATH} )
+set_target_properties( SimpleJoint PROPERTIES PREFIX "" )
+target_include_directories( SimpleJoint PUBLIC ${SOURCES_DIR}/robot_control/ )
+ 
 # add_library( AnkleBot MODULE ${SOURCES_DIR}/robot_control/anklebot.c )
 # set_target_properties( AnkleBot PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${ROBOT_CONTROL_MODULES_PATH} )
 # set_target_properties( AnkleBot PROPERTIES PREFIX "" )
