Add documentation images

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ add_executable( RobotControl ${SOURCES_DIR}/main.c ${SOURCES_DIR}/system.c ${SOU
 target_compile_definitions( RobotControl PUBLIC -DDEBUG -DZMQ_BUILD_DRAFT_API -DSENSORS_CONFIG_PATH="${SENSORS_CONFIG_PATH}" -DMOTORS_CONFIG_PATH="${MOTORS_CONFIG_PATH}" -DACTUATORS_CONFIG_PATH="${ACTUATORS_CONFIG_PATH}" -DROBOTS_CONFIG_PATH="${ROBOTS_CONFIG_PATH}" -DSIGNAL_IO_MODULES_PATH="${SIGNAL_IO_MODULES_PATH}" -DROBOT_CONTROL_MODULES_PATH="${ROBOT_CONTROL_MODULES_PATH}" )
 target_link_libraries( RobotControl DataLogging DataIOJSON KalmanFilters SignalProcessing AsyncIPC MultiThreading Timing ${CMAKE_DL_LIBS} )
 
-# PLUGINS/MODULES
+# EXAMPLE PLUGINS/MODULES
 
 add_library( DummyIO MODULE ${PLUGIN_SOURCES_DIR}/${SIGNAL_IO_PATH}/dummy.c )
 set_target_properties( DummyIO PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${SIGNAL_IO_MODULES_DIR} )
