--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,6 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR} )
 set( CMAKE_C_STANDARD 99 )
 set( CMAKE_C_STANDARD_REQUIRED ON )
 
-set( CONFIG_PATH config )
-set( MODULES_PATH plugins )
-
-set( SENSORS_CONFIG_PATH ${CONFIG_PATH}/sensors )
-set( MOTORS_CONFIG_PATH ${CONFIG_PATH}/motors )
-set( ACTUATORS_CONFIG_PATH ${CONFIG_PATH}/actuators )
-set( ROBOTS_CONFIG_PATH ${CONFIG_PATH}/robots )
-
 set( SOURCES_DIR ${CMAKE_SOURCE_DIR}/src/ )
 set( PLUGIN_SOURCES_DIR ${SOURCES_DIR}/${MODULES_PATH} )
 
@@ -22,12 +14,6 @@ set( MODULES_DIR ${CMAKE_SOURCE_DIR}/${MODULES_PATH} CACHE PATH "Dynamic modules
 
 set( SIGNAL_IO_PATH signal_io )
 set( ROBOT_CONTROL_PATH robot_control )
-
-set( SIGNAL_IO_MODULES_PATH ${MODULES_PATH}/${SIGNAL_IO_PATH} )
-set( ROBOT_CONTROL_MODULES_PATH ${MODULES_PATH}/${ROBOT_CONTROL_PATH} )
-
-set( SIGNAL_IO_MODULES_DIR ${MODULES_DIR}/${SIGNAL_IO_PATH} )
-set( ROBOT_CONTROL_MODULES_DIR ${MODULES_DIR}/${ROBOT_CONTROL_PATH} )
 
 include( ${SOURCES_DIR}/debug/CMakeLists.txt )
 include( ${SOURCES_DIR}/data_io/CMakeLists.txt )
@@ -42,19 +28,20 @@ link_directories( ${LIBRARY_DIR} )
 
 
 # (REAL-TIME) CONTROL APPLICATION
-add_executable( RobotControl ${SOURCES_DIR}/main.c ${SOURCES_DIR}/system.c ${SOURCES_DIR}/robots.c ${SOURCES_DIR}/actuators.c ${SOURCES_DIR}/sensors.c ${SOURCES_DIR}/motors.c )
-target_compile_definitions( RobotControl PUBLIC -DDEBUG -DZMQ_BUILD_DRAFT_API -DSENSORS_CONFIG_PATH="${SENSORS_CONFIG_PATH}" -DMOTORS_CONFIG_PATH="${MOTORS_CONFIG_PATH}" -DACTUATORS_CONFIG_PATH="${ACTUATORS_CONFIG_PATH}" -DROBOTS_CONFIG_PATH="${ROBOTS_CONFIG_PATH}" -DSIGNAL_IO_MODULES_PATH="${SIGNAL_IO_MODULES_PATH}" -DROBOT_CONTROL_MODULES_PATH="${ROBOT_CONTROL_MODULES_PATH}" )
+add_executable( RobotControl ${SOURCES_DIR}/main.c ${SOURCES_DIR}/system.c ${SOURCES_DIR}/robot.c ${SOURCES_DIR}/actuator.c ${SOURCES_DIR}/sensor.c ${SOURCES_DIR}/motor.c )
+target_compile_definitions( RobotControl PUBLIC -DDEBUG -DZMQ_BUILD_DRAFT_API )
 target_link_libraries( RobotControl DataLogging DataIOJSON KalmanFilters SignalProcessing AsyncIPC MultiThreading Timing ${CMAKE_DL_LIBS} )
+
 
 # EXAMPLE PLUGINS/MODULES
 
 add_library( DummyIO MODULE ${PLUGIN_SOURCES_DIR}/${SIGNAL_IO_PATH}/dummy.c )
-set_target_properties( DummyIO PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${SIGNAL_IO_MODULES_DIR} )
+set_target_properties( DummyIO PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${MODULES_DIR}/${SIGNAL_IO_PATH} )
 set_target_properties( DummyIO PROPERTIES PREFIX "" )
 target_include_directories( DummyIO PUBLIC ${PLUGIN_SOURCES_DIR}/${SIGNAL_IO_PATH}/ )
  
 # add_library( SimpleJoint MODULE ${PLUGIN_SOURCES_DIR}/${ROBOT_CONTROL_PATH}/simple_joint.c )
-# set_target_properties( SimpleJoint PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${ROBOT_CONTROL_MODULES_DIR} )
+# set_target_properties( SimpleJoint PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${MODULES_DIR}/${ROBOT_CONTROL_PATH} )
 # set_target_properties( SimpleJoint PROPERTIES PREFIX "" )
 # target_include_directories( SimpleJoint PUBLIC ${PLUGIN_SOURCES_DIR}/${ROBOT_CONTROL_PATH}/ )
  
