Add Motor reference sensor
(Hoppefully) Finally fix offset shooting bug

--- a/.gitignore
+++ b/.gitignore
@@ -13,33 +13,16 @@ src/main_cvi_rt.c
 src/zmq.h
 src/zmq_utils.h
 *.rc
-cvibuild.RobRehabControlRT/Release/Jamfile_instr
+cvibuild.*
 *.in
-cvibuild.RobRehabControlRT/Release/Jamfile
 *.xml
 *.res
 *.out
 *.log
-cvibuild.SimpleJointPlugin/Release/Jamfile
-cvibuild.SimpleJointPlugin/Release/Jamfile_instr
-cvibuild.NIDAQmxPlugin/Release/Jamfile_instr
-cvibuild.NIDAQmxPlugin/Release/Jamfile
-cvibuild.NICANEPOSPlugin/Release/Jamfile_instr
-cvibuild.NICANEPOSPlugin/Release/Jamfile
-cvibuild.EMGJointControlPlugin/Release/Jamfile_instr
-cvibuild.EMGJointControlPlugin/Release/Jamfile
-cvibuild.DualMotorControl/Release/Jamfile
-cvibuild.HDControlPlugin/Release/Jamfile
-cvibuild.DualMotorControl/Release/Jamfile_instr
-cvibuild.HDControlPlugin/Release/Jamfile_instr
-cvibuild.NISPIPlugin/Debug/Jamfile
-cvibuild.NISPIPlugin/Debug/Jamfile_instr
-cvibuild.NISPIPlugin/Debug/NISPI.dll.defs
 *.defs
 *.hdefs
-cvibuild.NISPIPlugin/Release/Jamfile
-cvibuild.NISPIPlugin/Release/Jamfile_instr
 src/plugins/robot_control/emg/emg_control~cvi173251.c
 *.json
 *.json
 *.json
+*.json~
