--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,15 @@ link_directories( ${LIBRARY_DIR} )
 
 
 # (REAL-TIME) CONTROL APPLICATION
-add_executable( RobotControl ${SOURCES_DIR}/main.c ${SOURCES_DIR}/system.c ${SOURCES_DIR}/robot.c ${SOURCES_DIR}/actuator.c ${SOURCES_DIR}/sensor.c ${SOURCES_DIR}/motor.c )
+
+add_library( TinyExpr SHARED ${SOURCES_DIR}/tinyexpr/tinyexpr.c )
+set_target_properties( TinyExpr PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_DIR} )
+target_include_directories( TinyExpr PUBLIC ${SOURCES_DIR}/tinyexpr/ )
+target_link_libraries( TinyExpr -lm )
+
+add_executable( RobotControl ${SOURCES_DIR}/main.c ${SOURCES_DIR}/system.c ${SOURCES_DIR}/robot.c ${SOURCES_DIR}/actuator.c ${SOURCES_DIR}/sensor.c ${SOURCES_DIR}/motor.c ${SOURCES_DIR}/input.c )
 target_compile_definitions( RobotControl PUBLIC -DDEBUG -DZMQ_BUILD_DRAFT_API )
-target_link_libraries( RobotControl DataLogging DataIOJSON KalmanFilters SignalProcessing AsyncIPC MultiThreading Timing ${CMAKE_DL_LIBS} )
+target_link_libraries( RobotControl DataLogging DataIOJSON KalmanFilters SignalProcessing AsyncIPC MultiThreading Timing TinyExpr ${CMAKE_DL_LIBS} )
 
 
 # EXAMPLE PLUGINS/MODULES
