--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set( ROBOT_CONTROL_PATH robot_control )
 include( ${SOURCES_DIR}/debug/CMakeLists.txt )
 include( ${SOURCES_DIR}/data_io/CMakeLists.txt )
 include( ${SOURCES_DIR}/kalman/CMakeLists.txt )
+include( ${SOURCES_DIR}/linearizer/CMakeLists.txt )
 include( ${SOURCES_DIR}/signal_processing/CMakeLists.txt )
 include( ${SOURCES_DIR}/threads/CMakeLists.txt )
 include( ${SOURCES_DIR}/timing/CMakeLists.txt )
@@ -42,7 +43,7 @@ target_link_libraries( TinyExpr -lm )
 
 add_executable( RobotControl ${SOURCES_DIR}/main.c ${SOURCES_DIR}/system.c ${SOURCES_DIR}/robot.c ${SOURCES_DIR}/actuator.c ${SOURCES_DIR}/sensor.c ${SOURCES_DIR}/motor.c ${SOURCES_DIR}/input.c ${SOURCES_DIR}/output.c )
 target_compile_definitions( RobotControl PUBLIC -DDEBUG -DZMQ_BUILD_DRAFT_API )
-target_link_libraries( RobotControl DataLogging DataIOJSON KalmanFilters SignalProcessing IPC MultiThreading Timing TinyExpr ${CMAKE_DL_LIBS} )
+target_link_libraries( RobotControl DataLogging DataIOJSON KalmanFilters SystemLinearizer SignalProcessing IPC MultiThreading Timing TinyExpr ${CMAKE_DL_LIBS} )
 if( WIN32 )
   target_link_libraries( RobotControl wingetopt )
 endif()
