--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR} )
 set( CMAKE_C_STANDARD 99 )
 set( CMAKE_C_STANDARD_REQUIRED ON )
 
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
+
 set( MODULES_PATH plugins )
 
 set( SOURCES_DIR ${CMAKE_SOURCE_DIR}/src/ )
